--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "theme": "moonstone",
   "translucency": false,
-  "cssTheme": "Minimal",
-  "baseFontSize": 17
+  "cssTheme": "",
+  "baseFontSize": 16
 }
