--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -2,5 +2,6 @@
   "theme": "moonstone",
   "translucency": false,
   "cssTheme": "",
-  "baseFontSize": 16
+  "baseFontSize": 16,
+  "accentColor": ""
 }
